	  all my shapes would inside out. Oops :)
	- Importing a local fork of OpenGL::RWX
	- Adding a life-sized nutcracker doll to help test RWX support.
	- Expanded OpenGL::RWX's per-face surface normals to face-averaged
	  per-vertex surface normals, allowing OpenGL to currectly smooth the
	  polygons (important on polished wood toys)

0.19 Mon 20 Dec 2010
	- Added a "God Mode" flying camera which uses the left shift key
	  as an exponential speed accelerator, and make it the default.
	- Added ->current static method to ::3DWorld to get currently
	  world. Removes the need to pass things like the camera around
	  everywhere all the time.
	- The skybox now locates the camera via ->current->camera instead
	  having to be passed the camera.
	- Added a console for overlaying the world with diagnostic text.
	- Set min_t to zero to push frames per second as high as possible.
	- Correcting some broken versions

0.18 Sun 19 Dec 2010
	- Moving the landscape to a typical 2000-era infinite ground plane,
	  but with a more detailed texture than in that era.
	  Unfortunately, the new ground plane means our skybox looks wrong
	  now, as it was never designed for use with a ground plane.
	- Reorganised some internals so we don't need to export from OpenGL
	  so much. This will be removed later, once OpenGL fixes it constants.
	- Added support for tiling textures with SDL::Tutorial::3DWorld::Tile

0.17 Sat 18 Dec 2010
	- Added preliminary support for loading models from RWX files

0.16 Sat 18 Dec 2010
	- Switch from manual GL display list code to OpenGL::List
	- Implemented left shift for "running"

0.15 Fri 17 Dec 2010
	- Because we can be fairly certain that TextureCube (i.e. crates)
	  will be popular, use that class to demonstrate the use of OpenGL
	  display lists via glGenLists(), glNewList(), and glCallList().
	- Noting that, of all things, glLineWidth() is insanely expensive.

0.14 Fri 17 Dec 2010
	- Actors are now rendered in random order to expose any places