@@ -10,6 +10,10 @@ Changes for Perl extension SDL-Tutorial-3DWorld
 	- Expanded OpenGL::RWX's per-face surface normals to face-averaged
 	  per-vertex surface normals, allowing OpenGL to currectly smooth the
 	  polygons (important on polished wood toys)
+	- Added preliminary support for OBJ models (only with per-face surface
+	  normals at this point).
+	- Added a superbly details and giant freaking table to demonstrate the
+	  greater quality of objects you tend to be able to find for obj files.
 
 0.19 Mon 20 Dec 2010
 	- Added a "God Mode" flying camera which uses the left shift key
